WEB-2: Added new application for event reminders
